--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -2,6 +2,8 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block page_content %}
+<h1>Login</h1>
+<hr/>
 {{ wtf.quick_form(form) }}
 <p>
     Nre User?
