--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -2,5 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 
 {% block page_content %}
+<h1>Register</h1>
+<hr>
 {{ wtf.quick_form(form) }}
 {% endblock %}
